# procedural_sound

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run.sh
.github/workflows/: ci.yml
include/: constants.h  core.h  envelope.h  event.h  graph.h  instrument.h  midi.h  oscillator.h  parameter.h  voice.h
src/: core.cpp  instrument.cpp  main.cpp  parameter.cpp
tests/: test_core.cpp  test_graph.cpp  test_instrument.cpp  test_main.cpp  test_oscillator.cpp
